# seatai1

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  SECURITY.md  package-lock.json  package.json  rebuild.bat
.claude/: settings.local.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: lib.rs
core/src/algorithms/: genetic.rs  mod.rs
core/src/constraints/: mod.rs  proximity.rs  separation.rs  zone.rs
core/src/engine/: mod.rs  optimizer.rs  registry.rs
core/src/fitness/: academic.rs  behavioral.rs  diversity.rs  mod.rs  special_needs.rs
core/src/models/: classroom.rs  layout.rs  mod.rs  result.rs  student.rs
core/src/utils/: math.rs  mod.rs
docs/: ALGORITHMS.md  API.md  ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  DEPLOYMENT.md  FUTURE_PLANS.md  METHODOLOGY_AND_PRIVACY.md  QUESTIONNAIRE.md  QUESTIONNAIRE_SCIENTIFIC_BASIS.md  QUESTIONNAIRE_SPEC.md  RESEARCH_BASIS.md  WASM.md
docs/marketing/: seatai-overview-ar.html  seatai-overview-ar.pptx  seatai-overview-en.html  seatai-overview-en.pptx  seatai-overview-he.html  seatai-overview-he.pptx  seatai-overview.html  seatai-overview.pptx
web/: .env.example  eslint.config.js  index.html  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vercel.json  vite.config.ts
web/docs/: GOOGLE_CLASSROOM_SETUP.md  LTI_SETUP.md  ROSTER_IMPORT.md
web/e2e/: app.spec.ts  example.spec.ts  flows.spec.ts  (+2 more)
(+143 files in other folders)
